[package]
name = "sacn-neewer-lite"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.13.0"
btleplug = "0.11.5"
futures = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
uuid = "1.10.0"
